# actor-headshot-retoucher

./: .gitignore  CHANGELOG.md  METHODOLOGY.md  README.md  SKILL.md  pyproject.toml  requirements-advanced.txt  requirements.txt
.github/workflows/: ci.yml
actor-headshot-retouch/: SKILL.md  pyproject.toml  requirements-advanced.txt  requirements.txt
actor-headshot-retouch/agents/: openai.yaml
actor-headshot-retouch/examples/: make_example.py  synthetic_retouch_v1_report.json
actor-headshot-retouch/references/: retouch_workflows.md
actor-headshot-retouch/retoucher/: __init__.py  align.py  blend.py  cli.py  config.py  demo.py  diff.py  generate.py  image_io.py  mask.py  pipeline.py  prompts.py  qa.py
actor-headshot-retouch/scripts/: check_readiness.py
actor-headshot-retouch/tests/: _synth.py  conftest.py  test_generate.py  test_image_io.py  test_pipeline_e2e.py  test_qa.py  test_stages.py
references/: retouch_workflows.md
retoucher/: __init__.py  analyze.py  audit.py  blend.py  calibrate.py  cli.py  config.py  demo.py  diff.py  faceparse.py  generate.py  image_io.py  mask.py  orchestrator.py  pipeline.py  prompts.py  qa.py  router.py  surgical.py  vision.py
scripts/: check_readiness.py  detect_blemishes.py  diag_protected.py  face_crop.py  gemini_retouch.py  polish_eyes.py  preview_under_eye.py  surgical_paste.py
tests/: _synth.py  test_analyze.py  test_audit.py  test_calibrate.py  test_cli.py  test_gemini_generator.py  test_orchestrator.py  test_qa.py  test_robustness.py  test_stages.py  test_surgical.py
